--- a/package.json
+++ b/package.json
@@ -3,9 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
+    "@react-pdf/renderer": "^3.1.5",
+    "axios": "^1.3.3",
+    "bootstrap": "^5.2.3",
+    "env-cmd": "^10.1.0",
+    "framer-motion": "^9.0.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-icons": "^4.7.1",
+    "react-router-dom": "^6.8.1",
+    "react-scripts": "5.0.1",
+    "sass": "^1.58.1"
   },
   "scripts": {
     "start": "react-scripts start",
