--- a/package.json
+++ b/package.json
@@ -7,21 +7,21 @@
     "@react-pdf/renderer": "^3.1.5",
     "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
+    "dotenv": "^16.1.3",
     "env-cmd": "^10.1.0",
     "framer-motion": "^9.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-pdf": "^7.0.1",
     "react-router-dom": "^6.8.1",
-    "react-scripts": "5.0.1",
     "sass": "^1.58.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -37,5 +37,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.0.0",
+    "vite": "^4.3.9"
   }
 }
