--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.7.1",
     "react-pdf": "^7.0.1",
     "react-router-dom": "^6.8.1",
+    "react-social-icons": "^5.15.0",
     "sass": "^1.58.1"
   },
   "scripts": {
